namespace/rook-ceph/rook-ceph/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-http
  namespace: rook-ceph
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rook.oglesby.io`)
      kind: Rule
      services:
      - name: rook-ceph-mgr-dashboard
        port: 7000
      middlewares:
      - name: redirect-https
        namespace: traefik
      - name: internal-whitelist
        namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rook-https
  namespace: rook-ceph
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rook.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
      - name: rook-ceph-mgr-dashboard
        port: 7000
  tls: 
    secretName: oglesby-io-tls
